📊 fix some mobile layout issues

--- a/results/src/core/charts/common2/Toggle.scss
+++ b/results/src/core/charts/common2/Toggle.scss
@@ -12,6 +12,9 @@
         margin: 0;
     }
     overflow: hidden;
+    @include small {
+        flex-direction: column;
+    }
 }
 .chart-toggle-control {
     overflow: hidden;
