--- a/results/src/core/charts/multiItemsExperience/MultiItems.scss
+++ b/results/src/core/charts/multiItemsExperience/MultiItems.scss
@@ -28,11 +28,11 @@
     }
 }
 .multiexp-controls {
-    display: flex;
-    justify-content: space-between;
-    h4 {
-        margin: 0;
-    }
+    // display: flex;
+    // justify-content: space-between;
+    // h4 {
+    //     margin: 0;
+    // }
 }
 
 .multiexp-control {
